<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="DUT_TestStruct" Id="{68a03939-fb1d-4106-be99-71ec9d9c03ea}">
    <Declaration><![CDATA[{attribute 'analysis' := '-33'}
TYPE DUT_TestStruct :
STRUCT
	BoolValue			:BOOL			:= TRUE;
	
	ByteValue			:BYTE			:= 16#FF;
	WordValue			:WORD			:= 16#FFFF;
	DWordValue			:DWORD			:= 16#FFFF_FFFF;
	LWordValue			:LWORD			:= 16#FFFF_FFFF_FFFF_FFFF;
	
	ShortValue			:SINT			:= -128;
	IntValue			:INT			:= -32768;
	DIntValue			:DINT			:= -2147483648 ;
	LongValue			:LINT			:= -9223372036854775808;

	UShortValue			:USINT			:= 255;
	UIntValue			:UINT			:= 65535;
	UDIntValue			:UDINT			:= 4294967295;
	ULongValue			:ULINT			:= 18446744073709551615;
										   
	FloatValue			:REAL			:= -3.402823E+38;
	DoubleValue			:LREAL			:= -1.79769313486231E+308;
	
	TimeValue			:TIME			:= T#1000MS;
	TimeOfDay			:TIME_OF_DAY	:= TOD#01:00;
	LTimeValue			:LTIME 			:= LTIME#1000NS;
	DateValue			:DATE			:= D#2106-02-05;
	DateAndTimeValue	:DATE_AND_TIME	:= DT#2106-02-05-06:28:15;
	
	StringValue			:STRING			:= 'Test String';
	WStringValue		:WSTRING		:= "Test WString";
	
	Nested				:DUT_TestStruct2;
	
	IntArray			:ARRAY[0..10] OF INT := [1000, 1001, 1002, 1003, 1004, 1005, 1006, 1007, 1008, 1009, 1010];
	MultiDimensionArray :ARRAY[0..1,0..2,0..3] OF INT := [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000, 2100, 2200, 2300, 2400];
	ComplexArray		:ARRAY[0..2] OF DUT_TestStruct2;
	MultiDimensionComplexArray :ARRAY[0..1,0..2,0..3] OF DUT_TestStruct2;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>