<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="WriteTestData" Id="{316d82d6-9b5b-48ba-a25a-d97d492fc17a}">
    <Declaration><![CDATA[TYPE WriteTestData :
STRUCT
	Reset				: BOOL 			:= FALSE;
	BoolValue			: BOOL			:= TRUE;
	
	ByteValue			: BYTE			:= 16#FF;
	WordValue			: WORD			:= 16#FFFF;
	DWordValue			: DWORD			:= 16#FFFF_FFFF;
	LWordValue			: LWORD			:= 16#FFFF_FFFF_FFFF_FFFF;
	
	SIntValue			: SINT			:= -128;
	IntValue			: INT			:= -32768;
	DIntValue			: DINT			:= -2147483648 ;
	LIntValue			: LINT			:= -9223372036854775808;
	
	USIntValue			: USINT			:= 255;
	UIntValue			: UINT			:= 65535;
	UDIntValue			: UDINT			:= 4294967295;
	ULIntValue			: ULINT			:= 18446744073709551615;
	
	RealValue			: REAL			:= -3.402823E+38;
	LRealValue			: LREAL			:= -1.79769313486231E+308;
	
	TimeValue1			: TIME			:= T#1000MS;
	TimeValue2			: TIME			:= T#1000MS;
	TimeOfDayValue1		: TIME_OF_DAY	:= TOD#01:00;
	TimeOfDayValue2		: TIME_OF_DAY	:= TOD#01:00;
	LTimeValue1			: LTIME 		:= LTIME#1000NS;
	LTimeValue2			: LTIME 		:= LTIME#1000NS;
	DateValue1			: DATE			:= D#2106-02-06;
	DateValue2			: DATE			:= D#2106-02-06;
	DateAndTimeValue1	: DATE_AND_TIME	:= DT#2106-02-06-06:28:15;
	DateAndTimeValue2	: DATE_AND_TIME	:= DT#2106-02-06-06:28:15;
	
	StringValue			: STRING		:= 'Test String';
	WStringValue		: WSTRING		:= "Test WString";
	
	EnumValue1			: TestEnum		:= TestEnum.first;
	EnumValue2			: TestEnum		:= TestEnum.first;
	EnumValue3			: TestEnum		:= TestEnum.first;
	
	IntArray			: ARRAY[0..10] OF INT := [1000, 1001, 1002, 1003, 1004, 1005, 1006, 1007, 1008, 1009, 1010];
	MultiDimensionArray : ARRAY[0..1,0..2,0..3] OF INT := [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000, 2100, 2200, 2300, 2400];
	ComplexArray		: ARRAY[0..2] OF DUT_TestStruct2;
	MultiDimensionComplexArray : ARRAY[0..1,0..2,0..3] OF DUT_TestStruct2;
	
	Nested				: DUT_TestStruct2;
	Nested2				: DUT_TestStruct2;
	
	StructValue			: DUT_TestStruct;
	StructValue2		: DUT_TestStruct;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>